@@ -1,3 +1,12 @@
 # TakeTheChest
-***
+
+
 Jeu-vidéo développé via JavaFX par Martin Mace-De-Gastines, Alexis Tourrenc-Lecerf et Louis-Alexandre Laguet.
+
+***
+## Utilisation
+
+Copier puis coller le texte suivant dans un terminal en étant placer dans le dossier contenant le fichier .jar pour lancer le jeu :
+````
+java --module-path ".\javafx-sdk-20\lib" --add-modules=javafx.controls,javafx.fxml,javafx.swing,javafx.base,javafx.graphics,javafx.media,javafx.web -jar .\TakeTheChest.jar
+````
